# rabbitmq-queue-size-alert

./: Cargo.toml  Dockerfile  README.md  alerts.toml
src/: main.rs
